# MotionPrediction

./: .gitignore  Custom_LSTM.ipynb  Mason.md  README.md  ToDo.md  lstm_dataset.pt  possibleDatasets.md  transformerTry.py  whatToDoNext.md
Datasets/: dataset5_creator.py  dataset6_creator.py  dataset_creator.py  dataset_preperation.py  lstm_dataset2.pt  lstm_dataset3.pt  lstm_dataset4.pt  lstm_dataset5.pt  lstm_dataset5_plain.pt  lstm_dataset6.pt
EvaluationResults/: AMPM_2.csv  Performance.ipynb  results.json  results_1.json  (+4 more)
catkin_ws/src/datasetcreator/: CMakeLists.txt  package.xml
catkin_ws/src/datasetcreator/launch/: record_motion.launch
catkin_ws/src/datasetcreator/src/: filtered_data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/Circle/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/LeftHalfCircle/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/LeftRight/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/RightHalfCircle/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/RightLeft/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/Slalom/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/Straight2/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/runs/run_20241106_113207/: data.csv
catkin_ws/src/datasetcreator/src/runs/straight/: data.csv  tensor_data.npy
catkin_ws/src/datasetcreator/src/scripts/: data_recorder.py  dataset_creator.py  filter_data.py  read_data.py  read_tensor.py  robot_controller.py  test_dataset_creator.py
(+49 files in other folders)
